--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,22 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.10</version>
+          <executions>
+              <execution>
+                  <id>analyze</id>
+                  <goals>
+                      <goal>analyze-only</goal>
+                  </goals>
+                  <configuration>
+                      <failOnWarning>false</failOnWarning>
+                      <outputXML>true</outputXML>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -100,6 +116,14 @@
       <releases>
         <enabled>false</enabled>
       </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+            <id>ejb3unit</id>
+            <name>ejb3unit repository</name>
+            <url>http://ejb3unit.sourceforge.net/</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
