--- a/trades-api-impl/pom.xml
+++ b/trades-api-impl/pom.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>jpmorgan</groupId>
@@ -46,6 +48,30 @@
         <artifactId>javax.ejb-api</artifactId>
         <version>3.2</version>
     </dependency>
+      <dependency>
+          <groupId>org.assertj</groupId>
+          <artifactId>assertj-core</artifactId>
+          <version>2.2.0</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+    			<groupId>com.bm</groupId>
+    			<artifactId>ejb3unit</artifactId>
+    			<version>2.0.0</version>
+    			<scope>test</scope>
+    		</dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.5.0</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator-annotation-processor</artifactId>
+        <version>4.1.0.Final</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
 
