--- a/trades-api-impl/pom.xml
+++ b/trades-api-impl/pom.xml
@@ -67,11 +67,18 @@
           <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-validator-annotation-processor</artifactId>
-        <version>4.1.0.Final</version>
+          <groupId>org.apache.bval</groupId>
+          <artifactId>bval-jsr</artifactId>
+          <version>1.1.1</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>org.apache.openejb</groupId>
+          <artifactId>openejb-core</artifactId>
+          <version>5.0.0-SNAPSHOT</version>
+          <scope>test</scope>
+      </dependency>
+
 
   </dependencies>
 
