--- a/trades-api-impl/pom.xml
+++ b/trades-api-impl/pom.xml
@@ -78,8 +78,12 @@
           <version>5.0.0-SNAPSHOT</version>
           <scope>test</scope>
       </dependency>
-
-
+      <dependency>
+          <groupId>com.google.code.findbugs</groupId>
+          <artifactId>jsr305</artifactId>
+          <version>3.0.1</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 
 </project>
